# liftwork

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  conftest.py  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yaml
apps/api/: pyproject.toml
apps/api/src/liftwork_api/: __init__.py  auth.py  dependencies.py  lifespan.py  main.py  middleware.py  schemas.py
apps/api/src/liftwork_api/routers/: __init__.py  applications.py  auth.py  builds.py  clusters.py  dashboard.py  deployments.py  health.py  metrics.py  webhooks.py
apps/api/tests/: conftest.py  test_applications.py  test_auth.py  test_clusters.py  test_health.py  test_log_stream.py  test_webhook_enqueues.py  test_webhooks.py
apps/dashboard/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
apps/dashboard/src/: App.tsx  index.css  main.tsx  router.tsx
apps/dashboard/src/components/: ActivityFeed.tsx  BuildsChart.tsx  LogStream.tsx  PipelineSteps.tsx  StatCard.tsx  StatusBadge.tsx
apps/dashboard/src/components/layout/: PageHeader.tsx  Sidebar.tsx
apps/dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx
apps/dashboard/src/lib/: api.ts  auth.ts  format.ts  types.ts
apps/dashboard/src/pages/: Activity.tsx  ApplicationDetail.tsx  Applications.tsx  BuildDetail.tsx  Clusters.tsx  Login.tsx  Overview.tsx
apps/dashboard/src/providers/: AuthProvider.tsx  QueryProvider.tsx
apps/worker/: pyproject.toml
apps/worker/src/liftwork_worker/: __init__.py  arq_worker.py  git.py  jobs.py  k8s.py  log_sinks.py  main.py  mock_executors.py  orchestrator.py  redis_log.py  state.py
apps/worker/src/liftwork_worker/deploy/: __init__.py  k8s_executor.py  orchestrator.py  rollout.py
apps/worker/src/liftwork_worker/executors/: __init__.py  buildkit_pod.py  local_docker.py
apps/worker/src/liftwork_worker/health/: __init__.py  cluster_check.py
apps/worker/tests/: conftest.py  test_buildkit_job_spec.py  test_deploy_orchestrator.py  test_deploy_rollout.py  test_jobs.py  test_orchestrator.py  test_redis_log.py  test_smoke.py
charts/liftwork/: Chart.yaml  values.yaml
deploy/: docker-compose.yaml
deploy/k8s/: 00-namespace.yaml  01-rbac.yaml  02-registry.yaml
migrations/: env.py
migrations/versions/: 20260429_1803_initial_schema.py  20260501_2102_application_deploy_overrides.py
scripts/: drive-test.sh  e2e-demo.sh  poll-build.sh  prepull-images.sh  probe-clusters.sh  probe-dashboard.sh  run-api-bg.sh  run-dashboard-bg.sh  run-worker-bg.sh  seed-welcome-app.sh  setup-kind-registry.sh
